static/style.css
  h1 a{
    color:black;
    text-decoration:none;
  }

  h1 a:hover{
    background:#e3edef;
  }

  .choose_menu {
    cursor: pointer;
  }

  .node {
    stroke: #fff;
    stroke-width: 1.5px;
  }

  .link {
    stroke: #999;
    stroke-opacity: .6;
  }

  ul, li{
    margin:0;
    border:0;
    padding:0;
    list-style:none;
  }

  #middlebar{
    font-size:12px;
    color:#3b5d14;
    background:white;
    font-weight:bold;
    padding:4px;
    height:30px;
    width: 180px;
    float:left;
    margin-left: 40px;
  }

  #middlebar .menu li {
  height:30px;
  float:left;
  margin-right:10px;
  }
  #middlebar .menu li a {
  color:#3b5d14;
  text-decoration:none;
  padding:0 10px;
  height:30px;
  line-height:30px;
  display:block;
  float:left;
  padding:0 26px 0 10px;
  }
  #middlebar .menu li a:hover{
  color:#666666;
  }

  #middlebar ul .submenu {
  border:solid 1px #c9dea1;
  border-top:none;
  background:#FFFFFF;
  position:relative;
  top:4px;
  width:200px;
  padding:6px 0;
  clear:both;
  z-index:2;
  display:none;
  }
  #middlebar ul .submenu li{
  background:none;
  display:block;
  float:none;
  margin:0 6px;
  border:0;
  height:auto;
  line-height:normal;
  border-top:solid 1px #DEDEDE;
  }
  #middlebar .submenu li a{
  background:none;
  display:block;
  float:none;
  padding:6px 6px;
  margin:0;
  border:0;
  height:auto;
  color:#105cbe;
  line-height:normal;
  }
  #middlebar .submenu li a:hover{
  background:#e3edef;
  }

  ul, li{margin:0; border:0; padding:0; list-style:none;}
  #sidebar{
  font-size:12px;
  color:#3b5d14;
  background:white;
  font-weight:bold;
  padding:4px;
  float:left;
  }
  #sidebar .menu li {
  height:30px;
  float:left;
  margin-right:10px;
  }
  #sidebar .menu li a{
  color:#3b5d14;
  text-decoration:none;
  padding:0 10px;
  height:30px;
  line-height:30px;
  display:block;
  float:left;
  padding:0 26px 0 10px;
  }
  #sidebar .menu li a:hover{
  color:#666666;
  }
  #sidebar ul .submenu {
  border:solid 1px #c9dea1;
  border-top:none;
  background:#FFFFFF;
  position:relative;
  top:4px;
  width:100%;
  padding:6px 0;
  clear:both;
  z-index:2;
  display:block;
  }
  #sidebar ul .submenu li{
  background:none;
  display:block;
  float:none;
  margin:0 6px;
  border:0;
  height:auto;
  line-height:normal;
  border-top:solid 1px #DEDEDE;
  }
  #sidebar .submenu li a{
  background:none;
  display:block;
  float:none;
  padding:6px 6px;
  margin:0;
  border:0;
  height:auto;
  color:#105cbe;
  line-height:normal;
  }
  #sidebar .submenu li a#show_edit:hover{
  background:#738678;
  }
  #sidebar .submenu li a#show_edit{
  color:#000000;
  }

  ul, li{margin:0; border:0; padding:0; list-style:none;}
  #infobar{
  font-size:12px;
  color:#3b5d14;
  background:white;
  font-weight:bold;
  padding:4px;
  height:30px;
  width: 380px;
  float:left;
  margin-left: 40px;
  }
  #infobar .menu li {
  height:30px;
  float:left;
  margin-right:10px;
  }
  #infobar .menu li a{
  color:#3b5d14;
  text-decoration:none;
  padding:0 10px;
  height:30px;
  line-height:30px;
  display:block;
  float:left;
  padding:0 26px 0 10px;
  }
  #infobar .menu li a:hover{
  color:#666666;
  }

  #infobar ul .submenu {
  border:solid 1px #c9dea1;
  border-top:none;
  background:#FFFFFF;
  position:relative;
  top:4px;
  width:380px;
  padding:6px 0;
  clear:both;
  z-index:2;
  display:none;
  }
  #infobar ul .submenu li{
  background:none;
  display:block;
  float:none;
  margin:0 6px;
  border:0;
  height:auto;
  line-height:normal;
  border-top:solid 1px #DEDEDE;
  }
  #infobar .submenu li a{
  background:none;
  display:block;
  float:none;
  padding:6px 6px;
  margin:0;
  border:0;
  height:auto;
  color:#105cbe;
  line-height:normal;
  }
  #infobar .submenu li a:hover{
  background:#e3edef;
  }

